code commit@Rahul
add edit and delete icon on all admin and master form

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -103,7 +103,19 @@
 
 						</ul>
 					</li>
-					<li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
+					<li>
+						<a href="#"><i class="fa fa-circle-o"></i>Employee Info <i
+								class="fa fa-angle-left pull-right"></i></a>
+						<ul class="treeview-menu">
+
+							<li><a th:href="@{/city/}"><i class="fa fa-circle-o"></i> City</a></li>
+							
+
+
+
+
+						</ul>
+					</li>
 				</ul>
 			</li>
 
