--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -79,7 +79,7 @@
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Description</label> <input type="text"
-															class="form-control" placeholder="Description"
+															class="form-control" placeholder="Description"th:field="*{description}"
 															title="discription">
 													</div>
 
@@ -98,7 +98,7 @@
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Account Description</label> <input type="text"
 															class="form-control" placeholder="Account Description"
-															th:field="*{description}" title="account discription">
+															title="account discription" th:field="*{accountDescription}">
 													</div>
 
 													<div class="form-group col-md-6">
