--- a/src/main/resources/templates/layouts/listview/listofFinancialActiveyear.html
+++ b/src/main/resources/templates/layouts/listview/listofFinancialActiveyear.html
@@ -68,9 +68,9 @@
 																	>Active</span></td>
 
 															<td><span> <a
-																		th:href="@{/financialactiveyear/edit/{id}(id=${activeFinancial.id})}">edit</a></span>
+																		th:href="@{/financialactiveyear/edit/{id}(id=${activeFinancial.id})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/financialactiveyear/delete/{id}(id=${activeFinancial.id})}">delete</a></span>
+																		th:href="@{/financialactiveyear/delete/{id}(id=${activeFinancial.id})}"><em class="fa fa-times" style="color: red"> Remove</em></a></span>
 															</td>
 														</tr>
 
