--- a/src/main/resources/templates/layouts/listview/listofOpenIndent.html
+++ b/src/main/resources/templates/layouts/listview/listofOpenIndent.html
@@ -79,9 +79,9 @@
 															<td><span class="badge bg-success">Active</span></td>
 
 															<td><span> <a
-																		th:href="@{/openindent/edit/{id}(id=${indent.indentNumber})}">edit</a></span>
+																		th:href="@{/openindent/edit/{id}(id=${indent.indentNumber})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/openindent/delete/{id}(id=${indent.indentNumber})}">delete</a></span>
+																		th:href="@{/openindent/delete/{id}(id=${indent.indentNumber})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
 															</td>
 														</tr>
 
