--- a/src/main/resources/templates/layouts/listview/listofQuotation.html
+++ b/src/main/resources/templates/layouts/listview/listofQuotation.html
@@ -64,9 +64,10 @@
 
 
 															<td><span> <a
-																		th:href="@{/quotationdetail/edit/{id}(id=${quotation.quotNo})}">edit</a></span>
+																		th:href="@{/quotationdetail/edit/{id}(id=${quotation.quotNo})}">
+<em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/quotationdetail/delete/{id}(id=${quotation.quotNo})}">delete</a></span>
+																		th:href="@{/quotationdetail/delete/{id}(id=${quotation.quotNo})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
 															</td>
 														</tr>
 
