--- a/src/main/resources/templates/layouts/listview/listofdepartment.html
+++ b/src/main/resources/templates/layouts/listview/listofdepartment.html
@@ -65,9 +65,9 @@
 
 
 															<td><span> <a
-																		th:href="@{/department/edit/{id}(id=${department.deptCode})}">edit</a></span>
+																		th:href="@{/department/edit/{id}(id=${department.deptCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/department/delete/{id}(id=${department.deptCode})}">delete</a></span>
+																		th:href="@{/department/delete/{id}(id=${department.deptCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></span>
 															</td>
 														</tr>
 
