--- a/src/main/resources/templates/layouts/listview/listofdesignation.html
+++ b/src/main/resources/templates/layouts/listview/listofdesignation.html
@@ -72,9 +72,9 @@
 
 
 															<td><span> <a
-																		th:href="@{/designation/edit/{id}(id=${desig.desigCode})}">edit</a></span>
+																		th:href="@{/designation/edit/{id}(id=${desig.desigCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/designation/delete/{id}(id=${desig.desigCode})}">delete</a></span>
+																		th:href="@{/designation/delete/{id}(id=${desig.desigCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></span>
 															</td>
 														</tr>
 
