--- a/src/main/resources/templates/layouts/listview/listofrequestForQuotation.html
+++ b/src/main/resources/templates/layouts/listview/listofrequestForQuotation.html
@@ -64,9 +64,9 @@
 
 
 															<td><span> <a
-																		th:href="@{/requestquotation/edit/{id}(id=${rfq.rfqNo})}">edit</a></span>
+																		th:href="@{/requestquotation/edit/{id}(id=${rfq.rfqNo})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/requestquotation/delete/{id}(id=${rfq.rfqNo})}">delete</a></span>
+																		th:href="@{/requestquotation/delete/{id}(id=${rfq.rfqNo})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
 															</td>
 														</tr>
 
