--- a/src/main/resources/templates/layouts/listview/listofstore.html
+++ b/src/main/resources/templates/layouts/listview/listofstore.html
@@ -65,9 +65,9 @@
 															<td th:text="${store.description}">Garrett Winters</td>
 
 															<td><span> <a
-																		th:href="@{/store/edit/{id}(id=${store.storeCode})}">edit</a></span>
+																		th:href="@{/store/edit/{id}(id=${store.storeCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/store/delete/{id}(id=${store.storeCode})}">delete</a></span>
+																		th:href="@{/store/delete/{id}(id=${store.storeCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
 															</td>
 														</tr>
 
