--- a/src/main/resources/templates/layouts/listview/listofsubmodule.html
+++ b/src/main/resources/templates/layouts/listview/listofsubmodule.html
@@ -71,9 +71,9 @@
 															</td>
 
 															<td><span> <a
-																		th:href="@{/sub-module/edit/{id}(id=${subModule.subModuleCode})}">edit</a></span>
+																		th:href="@{/sub-module/edit/{id}(id=${subModule.subModuleCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/sub-module/delete/{id}(id=${subModule.subModuleCode})}">delete</a></span>
+																		th:href="@{/sub-module/delete/{id}(id=${subModule.subModuleCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
 															</td>
 														</tr>
 
