--- a/src/main/resources/templates/layouts/Master/UOM.html
+++ b/src/main/resources/templates/layouts/Master/UOM.html
@@ -31,54 +31,54 @@
 
 							<div class="box box-primary">
 								<div class="box-header with-border">
-									<h3 class="box-title">Quick Example</h3>
+									<h3 class="box-title">UOM</h3>
 								</div>
 								<!-- form start -->
 								<form role="form" th:action="@{/uom/}" method="POST" th:object="${uom}">
 									<div class="box-body">
 
 										<div class="form-group col-md-12">
-											<label for="inputEmail4">Uom Code</label> <input type="text"
-												class="form-control" placeholder="uom code" th:field="*{uomCode}">
+											<label>UOM Code</label><label
+												style="color: red">*</label>
+											<input type="text" class="form-control" placeholder="Uom Code"
+												th:field="*{uomCode}" title="uom code" required/>
+
 										</div>
 										<div class="form-group col-md-12">
-											<label for="inputPassword4">Unit</label> <input type="text"
-												class="form-control" placeholder="unit" th:field="*{unit}">
+											<label>Unit</label><label
+												style="color: red">*</label>
+											<input type="text" class="form-control" placeholder="Unit"
+												th:field="*{unit}" title="unit" required />
+
 										</div>
 
 										<div class="form-group col-lg-12">
-											<label class="form-label">Measurement System</label> <label
-												style="color: red">*</label> <select class="form-control"
+											<label class="form-label">Measurement System</label>
+											 <select class="form-control"
 												title="measurement system" th:field="*{measurementSystem}">
 												<option value="">Select</option>
-												<option value="testing">testing</option>
-												<option value="testing">testing</option>
+												<option value="british">British</option>
+												<option value="french">French</option>
 												<!-- <option th:each="country :  ${countryList}"
 									th:text="${country.countryName}"
 									th:value=" ${country.countryCode}"></option> -->
 											</select>
 										</div>
 
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Tungsten Uom Code</label> <input type="text"
-												class="form-control" placeholder="tungsten uom code"
-												th:field="*{tungstenUomCode}">
-										</div>
 
-										<div class="form-group col-md-12">
-											<label for="inputEmail4">Tungsten Description</label> <input type="text"
-												class="form-control" placeholder="tungsten description"
-												th:field="*{tungstenDescription}">
-										</div>
 									</div>
 
 									<div class="box-footer">
 										<input type="submit" value="Submit" class="btn btn-primary" /> <input
 											type="reset" value="Reset" class="btn btn-danger" />
 									</div>
-									<a th:href="@{/uom/list}">view uom list</a>
+									
 
 								</form>
+								
+									<div style="width: parent; text-align-last: right; margin:8px">
+											<a th:href="@{/uom/list}">View All UOM</a>
+										</div>
 							</div>
 						</div>
 
