--- a/src/main/resources/templates/layouts/editview/editCategory.html
+++ b/src/main/resources/templates/layouts/editview/editCategory.html
@@ -71,7 +71,8 @@
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Description</label> <input type="text"
-															class="form-control" placeholder="location">
+															class="form-control" placeholder="Discription"
+															th:field="*{description}">
 													</div>
 
 													<div class="form-group col-md-6">
@@ -86,9 +87,8 @@
 
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Description</label> <input type="text"
-															class="form-control" placeholder="description"
-															th:field="*{description}">
+														<label for="inputEmail4">Account Description</label> <input
+															type="text" class="form-control" placeholder="description"  th:field="*{accountDescription}">
 													</div>
 
 													<div class="form-group col-md-6">
@@ -102,30 +102,19 @@
 															class="form-control" placeholder="parent name"
 															th:field="*{parentName}">
 													</div>
-
-													<div class="form-group" style="margin: 10px;">
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="Y">
-															<label class="form-check-label"
-																for="inlineRadio1">Active</label>
-														</div>
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="N">
-															<label class="form-check-label"
-																for="inlineRadio1">In-Active</label>
-														</div>
-
-													</div>
+													<label class="checkbox-inline">
+														<input type="radio" value="Y" name="inlineRadioOptions">Active
+														<input type="radio" value="N"
+															name="inlineRadioOptions">In-Active
+													</label>
 
 												</div><!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Submit" class="btn btn-primary" />
-													<input type="reset" value="Reset" class="btn btn-danger" />
+													<input type="submit" value="Apply Changes"
+														class="btn btn-primary" />
+													<input type="button" value="Go back!" class="btn btn-danger"
+														onclick="history.back()">
 												</div>
 
 
