--- a/src/main/resources/templates/layouts/editview/editUom.html
+++ b/src/main/resources/templates/layouts/editview/editUom.html
@@ -1,116 +1,102 @@
 <!DOCTYPE html>
+<html>
 
-<!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
-                                                ~{::title},
-                                                ~{:: #home-static-resources},
-                                                ~{:: #home-header},
-                                                ~{:: #home-nav},
-                                                ~{:: #home-main-content},  
-                                                ~{:: #home-footer}
-                                               )}">
-
-<head>
-<title>ERP WhareHouse</title>
-
-<th:block id="home-static-resources">
-
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
-
-</th:block>
+<head xmlns:th="http://www.thymeleaf.org">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>EBS</title>
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
+	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
 </head>
-<body>
 
-	<div id="home-header">Header of Home Page</div>
-
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
-	</div>
-
-	<div id="home-main-content">
-
-
-
-		<div id="home-main-content">
-
-			<h3> Edit UOM Master</h3>
-
-
-			<form th:action="@{/uom/}" method="POST" th:object="${uom}">
-				<div class="form-border">
-
-					<div class="row">
-						<div class="form-group col-md-6">
-							<label for="inputEmail4">Uom Code</label> <input type="text"
-								class="form-control" placeholder="uom code"
-								th:field="*{uomCode}">
-						</div>
-						<div class="form-group col-md-6">
-							<label for="inputPassword4">Unit</label> <input type="text"
-								class="form-control" placeholder="unit"
-								th:field="*{unit}">
+<body class="hold-transition skin-blue sidebar-mini">
+	<div class="wrapper">
+		<div>
+			<div th:replace="fragments/header :: header">...</div>
+			<div th:replace="fragments/sidebar :: sidebar">...</div>
+			<section class="content-wrapper">
+				<div class="row">
+					<!-- left column -->
+					<div class="col-md-12">
+						<div class="col-md-3">
 						</div>
 
-					</div>
 
-					<div class="row">
-						
+						<div class="col-md-6" style="margin-top: 20px;">
 
-						<div class="form-group col-lg-6">
-							<label class="form-label">Measurement System</label> <label
-								style="color: red">*</label> <select class="form-control"
-								title="measurement system" th:field="*{measurementSystem}">
-								<option value="">Select</option>
-								<option value="testing">testing</option>
-								<option value="testing">testing</option>
-								<!-- <option th:each="country :  ${countryList}"
+							<div class="box box-primary">
+								<div class="box-header with-border">
+									<h3 class="box-title">UOM</h3>
+								</div>
+								<!-- form start -->
+								<form role="form" th:action="@{/uom/}" method="POST" th:object="${uom}">
+									<div class="box-body">
+
+										<div class="form-group col-md-12">
+											<label>UOM Code</label><label
+												style="color: red">*</label>
+											<input type="text" class="form-control" placeholder="Uom Code"
+												th:field="*{uomCode}" title="uom code" required/>
+
+										</div>
+										<div class="form-group col-md-12">
+											<label>Unit</label><label
+												style="color: red">*</label>
+											<input type="text" class="form-control" placeholder="Unit"
+												th:field="*{unit}" title="unit" required />
+
+										</div>
+
+										<div class="form-group col-lg-12">
+											<label class="form-label">Measurement System</label>
+											 <select class="form-control"
+												title="measurement system" th:field="*{measurementSystem}">
+												<option value="">Select</option>
+												<option value="british">British</option>
+												<option value="french">French</option>
+												<!-- <option th:each="country :  ${countryList}"
 									th:text="${country.countryName}"
 									th:value=" ${country.countryCode}"></option> -->
-							</select>
+											</select>
+										</div>
+
+
+									</div>
+
+									<div class="box-footer">
+										<input type="submit" value="Apply Changes" class="btn btn-primary" /> 
+										<input type="button" value="Go back!" class="btn btn-danger"onclick="history.back()">
+									</div>
+									
+
+								</form>
+								
+									
+							</div>
 						</div>
-						
-						<div class="form-group col-md-6">
-							<label for="inputEmail4">Tungsten Uom Code</label> <input
-								type="text" class="form-control" placeholder="tungsten uom code"
-								th:field="*{tungstenUomCode}">
+
+
+						<div class="col-md-3">
 						</div>
-
-					</div>
-					<div class="row">
-					
-						<div class="form-group col-md-6">
-							<label for="inputEmail4">Tungsten Description</label> <input
-								type="text" class="form-control" placeholder="tungsten description"
-								th:field="*{tungstenDescription}">
-						</div>
-
-					</div>
-
-
-					<div class="row" style="margin: 10px">
-						<input type="submit" value="Submit" class="btn btn-primary" /> <input
-							type="reset" value="Reset" class="btn btn-danger" />
 					</div>
 
 				</div>
-			</form>
+			</section>
 
-			<div class="row text-right m-10">
-				<a th:href="@{/uom/list}">view state list</a>
-			</div>
-		</div>
-	</div>
-
-
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
-
-
+			<div th:replace="fragments/footer :: footer">...</div>
+			<!--   <section class="content">
+        
+        </section>-->
+			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
+			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
+			<script src="../../js/demo.js" th:src="@{/js/demo.js}"></script>
 </body>
+
 </html>
