--- a/src/main/resources/templates/layouts/listview/listofCompany.html
+++ b/src/main/resources/templates/layouts/listview/listofCompany.html
@@ -42,44 +42,50 @@
 									<form role="form">
 										<div class="box-body">
 											<div class="table-responsive-sm">
-									<table class="table table-striped" style="width: 80%">
-										<thead>
-											<tr>
-												<th scope="col">S.N.</th>
-												<th scope="col">Company Code</th>
-												<th scope="col">Company Name</th>
-												<th scope="col">Company Type</th>
-												
-												
-												<th scope="col">Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr th:each="company,iter  : ${listCompany}">
-												<td th:text="${iter.index}+1">1</td>
-												<td th:text="${company.compCode}">Garrett Winters</td>
-												<td th:text="${company.compName}">Garrett Winters</td>
-												<td th:text="${company.compType}">Garrett Winters</td>
-												
-												
-												
+												<table class="table table-striped" style="width: 80%">
+													<thead>
+														<tr>
+															<th scope="col">S.N.</th>
+															<th scope="col">Company Code</th>
+															<th scope="col">Company Name</th>
+															<th scope="col">Company Type</th>
 
-												<td><span> <a th:href="@{/companydetail/edit/{id}(id=${company.compCode})}">edit</a></span> <span> <a
-														th:href="@{/companydetail/delete/{id}(id=${company.compCode})}">delete</a></span></td>
-											</tr>
+
+															<th scope="col">Action</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:each="company,iter  : ${listCompany}">
+															<td th:text="${iter.index}+1">1</td>
+															<td th:text="${company.compCode}">Garrett Winters</td>
+															<td th:text="${company.compName}">Garrett Winters</td>
+															<td th:text="${company.compType}">Garrett Winters</td>
 
 
 
 
-										</tbody>
-									</table>
-								</div>
+															<td><span> <a
+																		th:href="@{/companydetail/edit/{id}(id=${company.compCode})}"><em
+																			class="fa fa-edit" style="color: blue;">
+																			Edit</em></a></span> <span> <a
+																		th:href="@{/companydetail/delete/{id}(id=${company.compCode})}">
+																		<em class="fa fa-times" style="color: red">
+																			Remove</em></a></span></td>
+														</tr>
+
+
+
+
+													</tbody>
+												</table>
+											</div>
 										</div>
 
 										<div class="box-footer">
-											
-												<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
-												
+
+											<input type="button" value="Go back!" class="btn btn-link"
+												onclick="history.back()">
+
 										</div>
 
 									</form>
@@ -95,14 +101,14 @@
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
-			
-			
+
+
 			<script>
-			
-			function getBack(){
-				alert("hello")
-				location.href = "companyDetail.html";
-			}
+
+				function getBack() {
+					alert("hello")
+					location.href = "companyDetail.html";
+				}
 			</script>
 			<!--   <section class="content">
         
