--- a/src/main/resources/templates/layouts/listview/listofFinancialyear.html
+++ b/src/main/resources/templates/layouts/listview/listofFinancialyear.html
@@ -67,9 +67,9 @@
 
 
 																<td><span> <a
-																			th:href="@{/financialyear/edit/{id}(id=${financialyear.id})}">edit</a></span>
+																			th:href="@{/financialyear/edit/{id}(id=${financialyear.id})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																	<span> <a
-																			th:href="@{/financialyear/delete/{id}(id=${financialyear.id})}">delete</a></span>
+																			th:href="@{/financialyear/delete/{id}(id=${financialyear.id})}"><em class="fa fa-times" style="color: red"> Remove</em></a></span>
 																</td>
 															</tr>
 
