--- a/src/main/resources/templates/layouts/listview/listofPurchaseOrder.html
+++ b/src/main/resources/templates/layouts/listview/listofPurchaseOrder.html
@@ -70,9 +70,9 @@
 															
 
 															<td><span> <a
-																		th:href="@{/purchaseorder/edit/{id}(id=${po.poNumber})}">edit</a></span>
+																		th:href="@{/purchaseorder/edit/{id}(id=${po.poNumber})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/purchaseorder/delete/{id}(id=${po.poNumber})}">delete</a></span>
+																		th:href="@{/purchaseorder/delete/{id}(id=${po.poNumber})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
 															</td>
 														</tr>
 
