--- a/src/main/resources/templates/layouts/listview/listofUser.html
+++ b/src/main/resources/templates/layouts/listview/listofUser.html
@@ -65,8 +65,8 @@
 												<td><span class="badge bg-success"
 													>Active</span></td>
 
-												<td><span> <a th:href="@{/user/edit/{id}(id=${user.userCode})}">edit</a></span> <span> <a
-														th:href="@{/user/delete/{id}(id=${user.userCode})}">delete</a></span></td>
+												<td><span> <a th:href="@{/user/edit/{id}(id=${user.userCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span> <a
+														th:href="@{/user/delete/{id}(id=${user.userCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span></td>
 											</tr>
 
 
