--- a/src/main/resources/templates/layouts/listview/listofcategory.html
+++ b/src/main/resources/templates/layouts/listview/listofcategory.html
@@ -11,6 +11,10 @@
 	<link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
+	
+	<link  href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 
 </head>
@@ -35,6 +39,9 @@
 							<div class="col-md-12" style="margin-top: 20px;">
 
 								<div class="box box-primary">
+								
+									<input type="hidden" id="mess" name="mess"th:value="${message}">
+									
 									<div class="box-header with-border">
 										<h3 class="box-title">List of Category</h3>
 									</div>
@@ -47,10 +54,9 @@
 														<tr>
 															<th scope="col">#</th>
 															<th scope="col">Category Code</th>
-															<th scope="col">Acount Head</th>
-															<th scope="col">Parent Code</th>
-															<th scope="col">Parent Name</th>
-															<th scope="col">Description</th>
+															<th scope="col">Category Name</th>
+															
+															<th scope="col">Action</th>
 
 														</tr>
 													</thead>
@@ -58,15 +64,16 @@
 														<tr th:each="category,iter  : ${categoryList}">
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${category.categCode}">Garrett Winters</td>
-															<td th:text="${category.accountHead}">Garrett Winters</td>
-															<td th:text="${category.parentCode}">Garrett Winters</td>
-															<td th:text="${category.parentName}">Garrett Winters</td>
+															<td th:text="${category.description}">Garrett Winters</td>
+															
 
 
 															<td><span> <a
-																		th:href="@{/category/edit/{id}(id=${category.categCode})}">edit</a></span>
+																		th:href="@{/category/edit/{id}(id=${category.categCode})}"><em
+														class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/category/delete/{id}(id=${category.categCode})}">delete</a></span>
+																		th:href="@{/category/delete/{id}(id=${category.categCode})}"><em
+														class="fa fa-times" style="color: red"> Remove</em></a></span>
 															</td>
 														</tr>
 
@@ -79,8 +86,7 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="submit" value="Back" onclick='window.history.back();'
-												class="btn btn-link" />
+										<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
 										</div>
 
 									</form>
@@ -96,6 +102,25 @@
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
+			
+			<script>
+$(document).ready(function() {
+var message = document.getElementById('mess').value
+if (message != null && message !== "") {
+ 
+swal(message, "", "success", {
+button : "OK",
+hideClass : {
+popup : 'animate__animated animate__fadeOutUp'
+},
+});
+} else {
+console.log("ajax request : " + message);
+}
+ 
+});
+</script>
+
 			<!--   <section class="content">
         
         </section>-->
