--- a/src/main/resources/templates/layouts/listview/listofitem.html
+++ b/src/main/resources/templates/layouts/listview/listofitem.html
@@ -72,9 +72,10 @@
 
 
 															<td><span> <a
-																		th:href="@{/item/edit/{id}(id=${item.itemCode})}">edit</a></span>
+																		th:href="@{/item/edit/{id}(id=${item.itemCode})}">
+<em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/item/delete/{id}(id=${item.itemCode})}">delete</a></span>
+																		th:href="@{/item/delete/{id}(id=${item.itemCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></span>
 															</td>
 														</tr>
 
