--- a/src/main/resources/templates/layouts/listview/listofmodulemaster.html
+++ b/src/main/resources/templates/layouts/listview/listofmodulemaster.html
@@ -64,9 +64,9 @@
 																	th:text="${module.active}">Active</span></td>
 
 															<td><span> <a
-																		th:href="@{/module/edit/{id}(id=${module.moduleCode})}">edit</a></span>
+																		th:href="@{/module/edit/{id}(id=${module.moduleCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span>
 																<span> <a
-																		th:href="@{/module/delete/{id}(id=${module.moduleCode})}">delete</a></span>
+																		th:href="@{/module/delete/{id}(id=${module.moduleCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span>
 															</td>
 														</tr>
 
