--- a/src/main/resources/templates/layouts/listview/listofprogram.html
+++ b/src/main/resources/templates/layouts/listview/listofprogram.html
@@ -63,8 +63,8 @@
 													
 														<td><span class="badge bg-success" th:text="${program.activeYn}">Active</span></td>
 													
-														<td><span> <a th:href="@{/program/edit/{id}(id=${program.programCode})}">edit</a></span> <span> <a
-																	th:href="@{/program/delete/{id}(id=${program.programCode})}">delete</a></span></td>
+														<td><span> <a th:href="@{/program/edit/{id}(id=${program.programCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span> <a
+																	th:href="@{/program/delete/{id}(id=${program.programCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span></td>
 													</tr></tbody>
 												</table>
 											</div>
