--- a/src/main/resources/templates/layouts/listview/listofserviceCategory.html
+++ b/src/main/resources/templates/layouts/listview/listofserviceCategory.html
@@ -64,8 +64,8 @@
 												
 												
 
-												<td><span> <a th:href="@{/servicecategory/edit/{id}(id=${serviceCategory.categoryCode})}">edit</a></span> <span> <a
-														th:href="@{/servicecategory/delete/{id}(id=${serviceCategory.categoryCode})}">delete</a></span></td>
+												<td><span> <a th:href="@{/servicecategory/edit/{id}(id=${serviceCategory.categoryCode})}"><em class="fa fa-edit" style="color: blue;"> Edit</em></a></span> <span> <a
+														th:href="@{/servicecategory/delete/{id}(id=${serviceCategory.categoryCode})}"><em class="fa fa-times" style="color: red"> Remove</em></a></a></span></td>
 											</tr>
 
 
