--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -44,7 +44,7 @@
 				<ul class="treeview-menu">
 				
 				
-					<li th:if="${#request.isUserInRole('COMPANY')}"><a th:href="@{/companydetail/}"><i class="fa fa-circle-o"></i> Company</a></li>
+					<li th:if="${#request.isUserInRole('COMPANY') or #request.isUserInRole('ADMIN')}"><a th:href="@{/companydetail/}"><i class="fa fa-circle-o"></i> Company</a></li>
 					
 				
 				
@@ -53,7 +53,7 @@
 					<li><a th:href="@{/financialactiveyear/}"><i class="fa fa-circle-o"></i> Active Financial Year</a>
 					</li>
 					
-					<li th:if="${#request.isUserInRole('USER')}"><a th:href="@{/user/}"><i class="fa fa-circle-o"></i>Users</a></li>
+					<li th:if="${#request.isUserInRole('USER') or #request.isUserInRole('ADMIN')}"><a th:href="@{/user/}"><i class="fa fa-circle-o"></i>Users</a></li>
 					
 					<li><a th:href="@{/userrights/}"><i class="fa fa-circle-o"></i>User Rights</a></li>
 					<li><a th:href="@{/module/}"><i class="fa fa-circle-o"></i>Module</a></li>
@@ -108,7 +108,13 @@
 								class="fa fa-angle-left pull-right"></i></a>
 						<ul class="treeview-menu">
 
+							<li><a th:href="@{/country/}"><i class="fa fa-circle-o"></i> Country</a></li>
+							<li><a th:href="@{/state/}"><i class="fa fa-circle-o"></i> State</a></li>
 							<li><a th:href="@{/city/}"><i class="fa fa-circle-o"></i> City</a></li>
+							
+							<li><a th:href="@{/department/}"><i class="fa fa-circle-o"></i> Department</a></li>
+							<li><a th:href="@{/designation/}"><i class="fa fa-circle-o"></i> Designation</a></li>
+							
 							
 
 
