code commit@Rahul
changes in database structure (company detail )

--- a/src/main/resources/templates/layouts/Master/companyDetail.html
+++ b/src/main/resources/templates/layouts/Master/companyDetail.html
@@ -536,11 +536,11 @@
 														<h5>Tax Details</h5>
 														<div class="row">
 															<div class="form-group col-md-6">
-																<label for="inputAddress">PF Number</label><span
+																<label for="inputAddress">Pan Number</label><span
 																	style="color: red">*</span> <input type="text"
 																	class="form-control" id="inputAddress"
-																	placeholder="Pf Number" th:field="*{tPfNumber}"
-																	title="pf number" required>
+																	placeholder="Pan Number" th:field="*{panNumber}"
+																	title="pan number" required>
 															</div>
 															<div class="form-group col-md-6">
 																<label for="inputEmail4">GST Number</label><span
@@ -572,13 +572,7 @@
 																	id="inputAddress" placeholder="Date of Filling"
 																	th:field="*{tFillingDate}" title="date of filling">
 															</div>
-															<div class="form-group col-md-6">
-																<label for="inputAddress">Pan Number</label><span
-																	style="color: red">*</span> <input type="text"
-																	class="form-control" id="inputAddress"
-																	placeholder="Pan Number" th:field="*{tPanNumber}"
-																	title="pan number" required>
-															</div>
+															
 
 														</div>
 													</div>
